fixing alignment issue

--- a/features/apimgt/org.wso2.carbon.apimgt.publisher.feature/src/main/resources/extensions/publisher/assets/api/themes/default/css/apim_common.css
+++ b/features/apimgt/org.wso2.carbon.apimgt.publisher.feature/src/main/resources/extensions/publisher/assets/api/themes/default/css/apim_common.css
@@ -155,7 +155,7 @@ label {
     background-color: #1965b2;
 }
 .chk-lbe{width: 100px; float: left;}
-.margin-left-chk{margin-left: 330px;}
+.margin-left-chk{margin-left: 335px;}
 #add_resource{float: left;  margin-left: 15px;}
 .resource_url_pattern{height: 35px; border: 1px solid #cccccc; }
 
